@@ -2,6 +2,6 @@
 <div align="right" style="font-size:8pt"><? echo $_SERVER["HTTP_USER_AGENT"];?></div>
 <hr width="97%" noshade="noshade" />
 <!-- Version and Credits **PLEASE DO NOT EDIT!** -->
-<div align="right" style="font-size:8pt">My Web Favorities System 0.05a<br />
+<div align="right" style="font-size:8pt">My Web Favorities System 0.05b<br />
 Copyright(C) 2004-2007 Roy</div>
 <!-- Version and Credits -->
